--- a/about.html
+++ b/about.html
@@ -1153,7 +1153,7 @@
                         <li>
                             <a href="#"
                                 class="hover:text-white transition duration-300 flex items-center gap-2 text-sm md:text-base">
-                                <span class="text-teal-300 text-xs md:text-sm">✦</span> الرحلة الذهبية لمريكا 
+                                <span class="text-teal-300 text-xs md:text-sm">✦</span> الرحلة الذهبية لامريكا
                             </a>
                         </li>
                        
