--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                     <a href="#" class="hover:text-[#e69a17] text-white text-sm">الرئيسية</a>
                     <a href="/about.html" class="hover:text-[#e69a17] text-white text-sm">من نحن</a>
                     <a href="/services.html" class="hover:text-[#e69a17] text-white text-sm">الخدمات</a>
-                    <a href="#" class="hover:text-[#e69a17] text-white text-sm">تواصل معنا</a>
+                    <a href="/contact.html" class="hover:text-[#e69a17] text-white text-sm">تواصل معنا</a>
                 </div>
             </nav>
 
@@ -961,7 +961,7 @@
                     نحن</a>
                 <a href="/services.html"
                     class="mobile-link text-lg text-white hover:text-[#e69a17] transition-colors w-full py-3 border-b border-gray-100">الخدمات</a>
-                <a href="#"
+                <a href="/contact.html"
                     class="mobile-link text-lg text-white hover:text-[#e69a17] transition-colors w-full py-3 border-b border-gray-100">تواصل
                     معنا</a>
 
@@ -1736,7 +1736,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الامارات </div>
-                    <div class="card-title"> </div>
+                    <div class="card-title">جمال برج خليفه  </div>
                     <div class="card-price">
 
                     </div>
@@ -1780,7 +1780,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">البحرين </div>
-                    <div class="card-title"> دولة البحرين </div>
+                    <div class="card-title"> استمتع بجمال البحرين </div>
                     <div class="card-price">
 
                     </div>
@@ -2028,14 +2028,14 @@
                     </p>
 
                     <!-- زر الإجراء -->
-                    <button
+                    <a href="https://wa.me/966502113147"
                         class="inline-flex items-center gap-3 bg-[#e69a17] hover:bg-[#e69a17] text-white px-8 py-4 rounded-full font-semibold transition-all duration-300 hover:shadow-lg hover:scale-105">
                         عرض كل الخدمات
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7">
                             </path>
                         </svg>
-                    </button>
+                    </a>
                 </div>
 
 
@@ -2121,9 +2121,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-teal-300 to-[#e69a17] overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=400&h=350&fit=crop"
+                        <img src="./img/services (1).png"
                             alt="برامج وجولات سياحية"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object- hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -2157,9 +2157,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-sky-300 to-sky-400 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?w=400&h=350&fit=crop"
+                        <img src="./img/services (2).png"
                             alt="انتقالات وتوصيل"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -2191,9 +2191,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-emerald-300 to-emerald-400 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?w=400&h=350&fit=crop"
+                        <img src="./img/services (3).png"
                             alt="حجز طيران"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -2225,9 +2225,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-blue-400 to-blue-500 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=400&h=350&fit=crop"
+                        <img src="./img/services (4).png"
                             alt="كروز"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -2258,9 +2258,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-red-300 to-red-400 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?w=400&h=350&fit=crop"
+                        <img src="./img/services (5).png"
                             alt="قطارات أوروبا"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object- hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -2856,7 +2856,7 @@
                         <li>
                             <a href="#"
                                 class="hover:text-white transition duration-300 flex items-center gap-2 text-sm md:text-base">
-                                <span class="text-teal-300 text-xs md:text-sm">✦</span> الرحلة الذهبية لمريكا
+                                <span class="text-teal-300 text-xs md:text-sm">✦</span> الرحلة الذهبية لامريكا
                             </a>
                         </li>
 
