--- a/services.html
+++ b/services.html
@@ -1045,9 +1045,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-teal-300 to-[#e69a17] overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=400&h=350&fit=crop"
+                        <img src="./img/services (1).png"
                             alt="برامج وجولات سياحية"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object- hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -1081,9 +1081,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-sky-300 to-sky-400 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?w=400&h=350&fit=crop"
+                        <img src="./img/services (2).png"
                             alt="انتقالات وتوصيل"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -1115,9 +1115,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-emerald-300 to-emerald-400 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?w=400&h=350&fit=crop"
+                        <img src="./img/services (3).png"
                             alt="حجز طيران"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -1149,9 +1149,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-blue-400 to-blue-500 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=400&h=350&fit=crop"
+                        <img src="./img/services (4).png"
                             alt="كروز"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -1182,9 +1182,9 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-red-300 to-red-400 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?w=400&h=350&fit=crop"
+                        <img src="./img/services (5).png"
                             alt="قطارات أوروبا"
-                            class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
+                            class="w-full h-full object- hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center gap-3 mb-4">
@@ -1946,7 +1946,7 @@
                         <li>
                             <a href="#"
                                 class="hover:text-white transition duration-300 flex items-center gap-2 text-sm md:text-base">
-                                <span class="text-teal-300 text-xs md:text-sm">✦</span> الرحلة الذهبية لمريكا
+                                <span class="text-teal-300 text-xs md:text-sm">✦</span> الرحلة الذهبية لامريكا
                             </a>
                         </li>
 
