--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TourDen - Discover The World</title>
+    <title>وكالة روز للسفر والسياحة</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1736,7 +1736,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الامارات </div>
-                    <div class="card-title">جمال برج خليفه  </div>
+                    <div class="card-title">استمتع بجمال برج خليفة</div> </div>
                     <div class="card-price">
 
                     </div>
@@ -1758,7 +1758,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">قطر </div>
-                    <div class="card-title"> دولة قطر </div>
+                    <div class="card-title"> لؤلؤة الخليج الحديثة </div>
                     <div class="card-price">
 
                     </div>
@@ -1780,7 +1780,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">البحرين </div>
-                    <div class="card-title"> استمتع بجمال البحرين </div>
+                    <div class="card-title">  أصالة وحداثة بحرينية  </div>
                     <div class="card-price">
 
                     </div>
@@ -1802,7 +1802,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الكويت </div>
-                    <div class="card-title"> قم بزيارة الكويت </div>
+                    <div class="card-title"> أصالة خليجية عريقة </div>
                     <div class="card-price">
 
                     </div>
