--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TourDen - Discover The World</title>
+    <title>وكالة روز للسفر والسياحة</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1450,7 +1450,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الامارات </div>
-                    <div class="card-title"> </div>
+                    <div class="card-title">استمتع بجمال برج خليفة</div>
                     <div class="card-price">
 
                     </div>
@@ -1472,7 +1472,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">قطر </div>
-                    <div class="card-title"> دولة قطر </div>
+                    <div class="card-title"> لؤلؤة الخليج الحديثة </div>
                     <div class="card-price">
 
                     </div>
@@ -1494,7 +1494,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">البحرين </div>
-                    <div class="card-title"> دولة البحرين </div>
+                    <div class="card-title"> أصالة وحداثة بحرينية  </div>
                     <div class="card-price">
 
                     </div>
@@ -1516,7 +1516,7 @@
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الكويت </div>
-                    <div class="card-title"> قم بزيارة الكويت </div>
+                    <div class="card-title"> أصالة خليجية عريقة </div>
                     <div class="card-price">
 
                     </div>
