--- a/index.html
+++ b/index.html
@@ -956,12 +956,12 @@
             <div class="flex flex-col items-start gap-6 py-12 px-6 text-black h-full overflow-y-auto">
                 <a href="#"
                     class="mobile-link text-lg text-white hover:text-[#e69a17] transition-colors w-full py-3 border-b border-gray-100">الرئيسية</a>
-                <a href="/about.html"
+                <a href="./about.html"
                     class="mobile-link text-lg text-white hover:text-[#e69a17] transition-colors w-full py-3 border-b border-gray-100">من
                     نحن</a>
-                <a href="/services.html"
+                <a href="./services.html"
                     class="mobile-link text-lg text-white hover:text-[#e69a17] transition-colors w-full py-3 border-b border-gray-100">الخدمات</a>
-                <a href="/contact.html"
+                <a href="./contact.html"
                     class="mobile-link text-lg text-white hover:text-[#e69a17] transition-colors w-full py-3 border-b border-gray-100">تواصل
                     معنا</a>
 
@@ -974,9 +974,9 @@
             </div>
 
             <!-- طبقة شفافة لتغطية المحتوى عند فتح القائمة -->
-            <div id="menuOverlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 md:hidden hidden"></div>
         </div>
     </header>
+    
 
     <!-- Script -->
     <script>
