--- a/contact.html
+++ b/contact.html
@@ -649,8 +649,8 @@
                 </div>
                 <h3 class="text-xl font-bold text-gray-800 mb-3 mt-6">البريد الإلكتروني</h3>
                 <p class="text-gray-600 mb-6">للرسائل الرسمية والاستفسارات</p>
-                <a href="mailto:info@travelagency.com" class="inline-flex items-center text-red-600 font-bold text-lg group-hover:text-red-700 transition-colors">
-                    info@travelagency.com
+                <a href="mailto:info@rosetravell.com" class="inline-flex items-center text-red-600 font-bold text-lg group-hover:text-red-700 transition-colors">
+                    info@rosetravell.com
                     <i class="fas fa-arrow-left mr-2 text-red-500 opacity-0 group-hover:opacity-100 transition-all duration-300 transform group-hover:-translate-x-1"></i>
                 </a>
             </div>
@@ -662,8 +662,8 @@
                 </div>
                 <h3 class="text-xl font-bold text-gray-800 mb-3 mt-6">الموقع الإلكتروني</h3>
                 <p class="text-gray-600 mb-6">زور موقعنا للمزيد من المعلومات</p>
-                <a href="https://travel-agency.com" target="_blank" class="inline-flex items-center text-purple-600 font-bold text-lg group-hover:text-purple-700 transition-colors">
-                    travel-agency.com
+                <a href="https://rosetravell.com" target="_blank" class="inline-flex items-center text-purple-600 font-bold text-lg group-hover:text-purple-700 transition-colors">
+                    rosetravell.com
                     <i class="fas fa-arrow-left mr-2 text-purple-500 opacity-0 group-hover:opacity-100 transition-all duration-300 transform group-hover:-translate-x-1"></i>
                 </a>
             </div>
@@ -800,7 +800,7 @@
                         </div>
                         <div>
                             <h3 class="text-white font-bold text-lg">البريد الإلكتروني</h3>
-                            <p class="text-[#e69a17] font-medium">info@travelagency.com</p>
+                            <p class="text-[#e69a17] font-medium">info@rosetravell.com</p>
                         </div>
                     </div>
                 </div>
@@ -900,9 +900,9 @@
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
                                         info@rowadtravel.com
                                     </a>
-                                    <a href="mailto:reservations@rowadtravel.com"
+                                    <a href="mailto:"
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
-                                        reservations@rowadtravel.com
+                                        
                                     </a>
                                 </div>
                             </div>
@@ -1256,7 +1256,7 @@
                             </div>
                             <div>
                                 <h4 class="font-bold text-white mb-1 text-sm md:text-base">البريد الإلكتروني</h4>
-                                <p class="text-gray-300 text-xs md:text-sm">example@Domain.com</p>
+                                <p class="text-gray-300 text-xs md:text-sm">info@rosetravell.com</p>
                             </div>
                         </div>
 
@@ -1280,7 +1280,7 @@
 
             <!-- حقوق الطبع والنشر -->
             <div class="text-center text-gray-300 text-xs md:text-sm px-4">
-                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ ashikacademy</p>
+                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ rosetravell.com</p>
             </div>
         </div>
     </footer>
