--- a/index.html
+++ b/index.html
@@ -2333,7 +2333,7 @@
                             </div>
                             <div>
                                 <h3 class="text-white font-bold text-lg">البريد الإلكتروني</h3>
-                                <p class="text-[#e69a17] font-medium">info@travelagency.com</p>
+                                <p class="text-[#e69a17] font-medium">info@rosetravell.com</p>
                             </div>
                         </div>
                     </div>
@@ -2546,9 +2546,9 @@
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
                                         info@rowadtravel.com
                                     </a>
-                                    <a href="mailto:reservations@rowadtravel.com"
+                                    <a href="mailto:"
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
-                                        reservations@rowadtravel.com
+                                        
                                     </a>
                                 </div>
                             </div>
@@ -2899,7 +2899,7 @@
                             </div>
                             <div>
                                 <h4 class="font-bold text-white mb-1 text-sm md:text-base">البريد الإلكتروني</h4>
-                                <p class="text-gray-300 text-xs md:text-sm">example@Domain.com</p>
+                                <p class="text-gray-300 text-xs md:text-sm">info@rosetravell.com</p>
                             </div>
                         </div>
 
@@ -2923,7 +2923,7 @@
 
             <!-- حقوق الطبع والنشر -->
             <div class="text-center text-gray-300 text-xs md:text-sm px-4">
-                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ ashikacademy</p>
+                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ rosetravell.com</p>
             </div>
         </div>
     </footer>
