--- a/about.html
+++ b/about.html
@@ -1196,7 +1196,7 @@
                             </div>
                             <div>
                                 <h4 class="font-bold text-white mb-1 text-sm md:text-base">البريد الإلكتروني</h4>
-                                <p class="text-gray-300 text-xs md:text-sm">example@Domain.com</p>
+                                <p class="text-gray-300 text-xs md:text-sm">info@rosetravell.com</p>
                             </div>
                         </div>
 
@@ -1220,7 +1220,7 @@
 
             <!-- حقوق الطبع والنشر -->
             <div class="text-center text-gray-300 text-xs md:text-sm px-4">
-                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ ashikacademy</p>
+                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ rosetravell.com</p>
             </div>
         </div>
     </footer>
