--- a/services.html
+++ b/services.html
@@ -1213,7 +1213,6 @@
             </div>
         </div>
     </div>
-
     <!-- Hero Section -->
  
     <section class="w-full pt-16  bg-[#e9f2f0] -mt-[80px]">
@@ -1989,7 +1988,7 @@
                             </div>
                             <div>
                                 <h4 class="font-bold text-white mb-1 text-sm md:text-base">البريد الإلكتروني</h4>
-                                <p class="text-gray-300 text-xs md:text-sm">example@Domain.com</p>
+                                <p class="text-gray-300 text-xs md:text-sm">info@rosetravell.com</p>
                             </div>
                         </div>
 
@@ -2013,7 +2012,7 @@
 
             <!-- حقوق الطبع والنشر -->
             <div class="text-center text-gray-300 text-xs md:text-sm px-4">
-                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ ashikacademy</p>
+                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ rosetravell.com</p>
             </div>
         </div>
     </footer>
