--- a/index.html
+++ b/index.html
@@ -1253,8 +1253,7 @@
                             <span class="text-sm font-semibold">رؤيتنا</span>
                         </div>
                         <p class="text-gray-700 text-sm leading-relaxed">
-                            أن نكون الخيار الأول في مجال السفر والسياحة من خلال تقديم خدمات مبتكرة وتجارب سفر استثنائية.
-                        </p>
+أن نكون الخيار الأول في مجال السفر والسياحة من خلال تقديم خدمات مبتكرة وتجارب سفر استثنائية بحلول عام ٢٠٣٠ م                        </p>
                     </div>
 
                     <div
@@ -1525,7 +1524,7 @@
         <div class="packages-grid">
             <!-- Card 13: امريكا  -->
             <div class="package-card">
-                <img src="./img/13.png" alt="امريكا " class="card-image">
+                <img src="./img/Artboard 13.png" alt="امريكا " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">امريكا </div>
@@ -1548,7 +1547,7 @@
 
             <!-- Card 4: باريس -->
             <div class="package-card">
-                <img src="./img/6.png" alt="باريس" class="card-image">
+                <img src="./img/Artboard 6.png" alt="باريس" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">باريس</div>
@@ -1571,7 +1570,7 @@
 
             <!-- Card 8: تركيا -->
             <div class="package-card">
-                <img src="./img/2.png" alt="تركيا" class="card-image">
+                <img src="./img/Artboard 2 (1).png" alt="تركيا" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">تركيا</div>
@@ -1594,7 +1593,7 @@
 
             <!-- Card 5: لندن -->
             <div class="package-card">
-                <img src="./img/7.png" alt="لندن" class="card-image">
+                <img src="./img/Artboard 7.png" alt="لندن" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">لندن</div>
@@ -1617,7 +1616,7 @@
 
             <!-- Card 2: جورجيا -->
             <div class="package-card">
-                <img src="./img/4.png" alt="جورجيا" class="card-image">
+                <img src="./img/Artboard 4.png" alt="جورجيا" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">جورجيا </div>
@@ -1640,7 +1639,7 @@
 
             <!-- Card 3: ميلانو -->
             <div class="package-card">
-                <img src="./img/5.png" alt="ميلانو" class="card-image">
+                <img src="./img/Artboard 5.png" alt="ميلانو" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">ميلانو</div>
@@ -1662,7 +1661,7 @@
             </div>
             <!-- Card 7: المالديف -->
             <div class="package-card">
-                <img src="./img/1.png" alt="المالديف" class="card-image">
+                <img src="./img/Artboard 1 (3).png" alt="المالديف" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">المالديف</div>
@@ -1686,7 +1685,7 @@
 
             <!-- Card 1: مصر -->
             <div class="package-card">
-                <img src="./img/3.png" alt="مصر" class="card-image">
+                <img src="./img/Artboard 3.png" alt="مصر" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">مصر </div>
@@ -1709,7 +1708,7 @@
 
             <!-- Card 6: دبي  -->
             <div class="package-card">
-                <img src="./img/8.png" alt="دبي " class="card-image">
+                <img src="./img/Artboard 8.png" alt="دبي " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">دبي</div>
@@ -1732,7 +1731,7 @@
 
             <!-- Card 14: الامارات  -->
             <div class="package-card">
-                <img src="./img/Artboard 15.png" alt="الامارات " class="card-image">
+                <img src="./img/Artboard 15 (1).png" alt="الامارات " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الامارات </div>
@@ -1754,7 +1753,7 @@
             </div>
             <!-- Card 15: قطر  -->
             <div class="package-card">
-                <img src="./img/Artboard 16.png" alt="قطر " class="card-image">
+                <img src="./img/Artboard 14 (1).png" alt="قطر " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">قطر </div>
@@ -1776,7 +1775,7 @@
             </div>
             <!-- Card 15: البحرين   -->
             <div class="package-card">
-                <img src="./img/Artboard 14.png" alt="البحرين  " class="card-image">
+                <img src="./img/Artboard 16 (1).png" alt="البحرين  " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">البحرين </div>
@@ -1843,7 +1842,7 @@
 
             <!-- Card 9: الطائف -->
             <div class="package-card">
-                <img src="./img/9.png" alt="الطائف" class="card-image">
+                <img src="./img/Artboard 9.png" alt="الطائف" class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الطائف</div>
@@ -1865,7 +1864,7 @@
             </div>
             <!-- Card 10: ابها  -->
             <div class="package-card">
-                <img src="./img/10.png" alt="ابها " class="card-image">
+                <img src="./img/Artboard 10.png" alt="ابها " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">ابها </div>
@@ -1887,7 +1886,7 @@
             </div>
             <!-- Card 11: الباحة  -->
             <div class="package-card">
-                <img src="./img/11.png" alt="الباحة " class="card-image">
+                <img src="./img/Artboard 11.png" alt="الباحة " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">الباحة </div>
@@ -1909,7 +1908,7 @@
             </div>
             <!-- Card 12: العلا  -->
             <div class="package-card">
-                <img src="./img/12.png" alt="العلا " class="card-image">
+                <img src="./img/Artboard 12.png" alt="العلا " class="card-image">
                 <div class="card-overlay"></div>
                 <div class="card-content">
                     <div class="card-destination">العلا </div>
@@ -2721,7 +2720,7 @@
     <footer class="bg-[#1a2336] text-white py-8 md:py-12 lg:py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- المحتوى الرئيسي للفوتر -->
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-12 mb-8 lg:mb-12">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-8 lg:gap-12 mb-8 lg:mb-12">
 
                 <!-- شعار ووصف الوكالة -->
                 <div class="col-span-1">
@@ -2734,18 +2733,18 @@
                         نحن نقدم أفضل خدمات السفر والسياحة لضمان تجربة ممتعة ومريحة لعملائنا الكرام حول العالم.
                     </p>
                     <div>
-                        <h3 class="font-bold mb-3 lg:mb-4 text-sm md:text-base">تابعنا على :</h3>
-                        <div class="flex gap-3">
+                        <h3 class="font-bold mb-3 lg:mb-4 text-sm md:text-base md:mt-[100px]">تابعنا على :</h3>
+                        <div class="flex gap-3 ">
 
                             <!-- Facebook -->
-                            <a href="https://www.facebook.com/rosee.travel/" class="bg-[#1877F2] text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <a href="https://www.facebook.com/rosee.travel/" class="bg-[#1877F2] text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:brightness-90">
                                 <i class="fab fa-facebook-f text-sm md:text-base"></i>
                             </a>
 
                             <!-- X (Twitter الجديد) -->
-                            <a href="https://x.com/rosetravel_sa" class="bg-black text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <a href="https://x.com/rosetravel_sa" class="bg-black text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
            flex items-center justify-center 
            transition duration-300 transform hover:scale-110 hover:opacity-80">
                                 <i class="fa-brands fa-x-twitter text-sm md:text-base"></i>
@@ -2753,7 +2752,7 @@
 
 
                             <!-- TikTok -->
-                            <a href="https://www.tiktok.com/@rose_travel_agency" class="bg-black text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <a href="https://www.tiktok.com/@rose_travel_agency" class="bg-black text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:opacity-80">
                                 <i class="fab fa-tiktok text-sm md:text-base"></i>
@@ -2761,21 +2760,21 @@
 
                             <!-- Instagram -->
                             <a href="https://www.instagram.com/rosetravel.sa" class="bg-gradient-to-tr from-yellow-400 via-pink-500 to-purple-600 
-                   text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                   text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:opacity-90">
                                 <i class="fab fa-instagram text-sm md:text-base"></i>
                             </a>
 
                             <!-- Email -->
-                            <a href="mailto:info@example.com" class="bg-gray-600 text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <a href="mailto:info@example.com" class="bg-gray-600 text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:bg-gray-700">
                                 <i class="fas fa-envelope text-sm md:text-base"></i>
                             </a>
 
                             <!-- Snapchat -->
-                            <a href="https://www.snapchat.com/add/rosetravel-sa" class="bg-[#FFFC00] text-black rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <a href="https://www.snapchat.com/add/rosetravel-sa" class="bg-[#FFFC00] text-black rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:brightness-95">
                                 <i class="fab fa-snapchat-ghost text-sm md:text-base"></i>
@@ -2916,15 +2915,45 @@
                         </div>
                     </div>
                 </div>
+                                <!-- البيانات الرسمية -->
+<div class="col-span-1">
+    <div class="mb-6 lg:mb-8">
+        <h3
+            class="text-base md:text-lg font-bold mb-3 lg:mb-4 pb-2 border-b-2 border-white inline-block">
+            البيانات الرسمية
+            <span class="text-teal-300 mr-2">⋯</span>
+        </h3>
+    </div>
+
+    <div class="space-y-4 text-gray-300 text-sm">
+
+        <div>
+            <p class="font-semibold text-white">السجل التجاري</p>
+            <p>7053006909</p>
+        </div>
+
+        <div>
+            <p class="font-semibold text-white">رقم الترخيص</p>
+            <p>73107227</p>
+        </div>
+
+        <!-- QR -->
+        <div class="mt-4">
+            <img src="./img/qr-code.png"
+                 alt="QR Code"
+                 class="w-28 h-28 bg-white p-2 rounded-xl shadow-md">
+        </div>
+
+    </div>
+</div>
             </div>
+            
 
             <!-- خط فاصل -->
             <div class="border-t border-teal-700/50 my-6 lg:my-8"></div>
 
-            <!-- حقوق الطبع والنشر -->
-            <div class="text-center text-gray-300 text-xs md:text-sm px-4">
-                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ rosetravell.com</p>
-            </div>
+ 
+
         </div>
     </footer>
 
