--- a/about.html
+++ b/about.html
@@ -1017,9 +1017,10 @@
    <footer class="bg-[#1a2336] text-white py-8 md:py-12 lg:py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- المحتوى الرئيسي للفوتر -->
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-12 mb-8 lg:mb-12">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-8 lg:gap-12 mb-8 lg:mb-12">
 
                 <!-- شعار ووصف الوكالة -->
+                 
                 <div class="col-span-1">
                     <div class="flex items-center gap-3 mb-4 lg:mb-6">
                         <img src="./img/logo 1.png" class="w-12 h-12 md:w-14 md:h-14 lg:w-16 lg:h-16"
@@ -1029,58 +1030,57 @@
                     <p class="text-gray-300 text-sm leading-relaxed mb-4 lg:mb-6">
                         نحن نقدم أفضل خدمات السفر والسياحة لضمان تجربة ممتعة ومريحة لعملائنا الكرام حول العالم.
                     </p>
-                     <div class="flex gap-3">
+                    <div>
+                        <h3 class="font-bold mb-3 lg:mb-4 text-sm md:text-base md:mt-[100px]">تابعنا على :</h3>
+                        <div class="flex gap-3 ">
 
-        <!-- Facebook -->
-        <a href="https://www.facebook.com/rosee.travel/"
-            class="bg-[#1877F2] text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <!-- Facebook -->
+                            <a href="https://www.facebook.com/rosee.travel/" class="bg-[#1877F2] text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:brightness-90">
-            <i class="fab fa-facebook-f text-sm md:text-base"></i>
-        </a>
+                                <i class="fab fa-facebook-f text-sm md:text-base"></i>
+                            </a>
 
-             <!-- X (Twitter الجديد) -->
-<a href="https://x.com/rosetravel_sa"
-    class="bg-black text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <!-- X (Twitter الجديد) -->
+                            <a href="https://x.com/rosetravel_sa" class="bg-black text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
            flex items-center justify-center 
            transition duration-300 transform hover:scale-110 hover:opacity-80">
-    <i class="fa-brands fa-x-twitter text-sm md:text-base"></i>
-</a>
+                                <i class="fa-brands fa-x-twitter text-sm md:text-base"></i>
+                            </a>
 
-        <!-- TikTok -->
-        <a href="https://www.tiktok.com/@rose_travel_agency"
-            class="bg-black text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+
+                            <!-- TikTok -->
+                            <a href="https://www.tiktok.com/@rose_travel_agency" class="bg-black text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:opacity-80">
-            <i class="fab fa-tiktok text-sm md:text-base"></i>
-        </a>
+                                <i class="fab fa-tiktok text-sm md:text-base"></i>
+                            </a>
 
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/rosetravel.sa"
-            class="bg-gradient-to-tr from-yellow-400 via-pink-500 to-purple-600 
-                   text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <!-- Instagram -->
+                            <a href="https://www.instagram.com/rosetravel.sa" class="bg-gradient-to-tr from-yellow-400 via-pink-500 to-purple-600 
+                   text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:opacity-90">
-            <i class="fab fa-instagram text-sm md:text-base"></i>
-        </a>
+                                <i class="fab fa-instagram text-sm md:text-base"></i>
+                            </a>
 
-        <!-- Email -->
-        <a href="mailto:info@example.com"
-            class="bg-gray-600 text-white rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <!-- Email -->
+                            <a href="mailto:info@example.com" class="bg-gray-600 text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:bg-gray-700">
-            <i class="fas fa-envelope text-sm md:text-base"></i>
-        </a>
+                                <i class="fas fa-envelope text-sm md:text-base"></i>
+                            </a>
 
-        <!-- Snapchat -->
-        <a href="https://www.snapchat.com/add/rosetravel-sa"
-            class="bg-[#FFFC00] text-black rounded-full w-9 h-9 md:w-10 md:h-10 
+                            <!-- Snapchat -->
+                            <a href="https://www.snapchat.com/add/rosetravel-sa" class="bg-[#FFFC00] text-black rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:brightness-95">
-            <i class="fab fa-snapchat-ghost text-sm md:text-base"></i>
-        </a>
+                                <i class="fab fa-snapchat-ghost text-sm md:text-base"></i>
+                            </a>
 
-    </div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <!-- الصفحات الرئيسية -->
@@ -1213,15 +1213,45 @@
                         </div>
                     </div>
                 </div>
+
+                                <!-- البيانات الرسمية -->
+<div class="col-span-1">
+    <div class="mb-6 lg:mb-8">
+        <h3
+            class="text-base md:text-lg font-bold mb-3 lg:mb-4 pb-2 border-b-2 border-white inline-block">
+            البيانات الرسمية
+            <span class="text-teal-300 mr-2">⋯</span>
+        </h3>
+    </div>
+
+    <div class="space-y-4 text-gray-300 text-sm">
+
+        <div>
+            <p class="font-semibold text-white">السجل التجاري</p>
+            <p>7053006909</p>
+        </div>
+
+        <div>
+            <p class="font-semibold text-white">رقم الترخيص</p>
+            <p>73107227</p>
+        </div>
+
+        <!-- QR -->
+        <div class="mt-4">
+            <img src="./img/qr-code.png"
+                 alt="QR Code"
+                 class="w-28 h-28 bg-white p-2 rounded-xl shadow-md">
+        </div>
+
+    </div>
+</div>
             </div>
+            
 
             <!-- خط فاصل -->
             <div class="border-t border-teal-700/50 my-6 lg:my-8"></div>
 
-            <!-- حقوق الطبع والنشر -->
-            <div class="text-center text-gray-300 text-xs md:text-sm px-4">
-                <p>وكالة روز © حقوق النشر 2026. جميع الحقوق محفوظة لـ rosetravell.com</p>
-            </div>
+ 
         </div>
     </footer>
 
