--- a/contact.html
+++ b/contact.html
@@ -896,9 +896,9 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-gray-900 mb-1">البريد الإلكتروني</h4>
-                                    <a href="mailto:info@rowadtravel.com"
+                                    <a href="mailto:info@rosetravell.com"
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
-                                        info@rowadtravel.com
+                                        info@rosetravell.com
                                     </a>
                                     <a href="mailto:"
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
