--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>وكالة روز للسفر والسياحة</title>
+    <title> وكالة روز للسفر والساحة - افضل وكالة سفر وسياحة في جدة</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -2541,9 +2541,9 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-gray-900 mb-1">البريد الإلكتروني</h4>
-                                    <a href="mailto:info@rowadtravel.com"
+                                    <a href="mailto:info@rosetravell.com"
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
-                                        info@rowadtravel.com
+                                        info@rosetravell.com
                                     </a>
                                     <a href="mailto:"
                                         class="text-gray-600 hover:text-[#e69a17] transition-colors block">
