--- a/about.html
+++ b/about.html
@@ -1065,7 +1065,7 @@
                             </a>
 
                             <!-- Email -->
-                            <a href="mailto:info@example.com" class="bg-gray-600 text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
+                            <a href="mailto:info@rosetravell.com" class="bg-gray-600 text-white rounded-full px-5 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:bg-gray-700">
                                 <i class="fas fa-envelope text-sm md:text-base"></i>
