--- a/services.html
+++ b/services.html
@@ -1857,7 +1857,7 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:info@example.com"
+        <a href="mailto:info@rosetravell.com"
             class="bg-gray-600 text-white rounded-full px-4 w-9 h-9 md:w-10 md:h-10 
                    flex items-center justify-center 
                    transition duration-300 transform hover:scale-110 hover:bg-gray-700">
