--- a/about.html
+++ b/about.html
@@ -658,7 +658,7 @@
                     
                     <div class="text-gray-700 leading-relaxed space-y-6 text-lg">
                         <p class="animate-on-scroll">
-                            تأسست وكالة <span class="font-bold text-teal-700">روز للسفر والسياحة</span> عام 2010 برؤية طموحة لتحويل أحلام السفر إلى واقع ملموس. على مدار أكثر من 15 عاماً، كنا شريكاً موثوقاً للآلاف من المسافرين الذين سعوا لاكتشاف العالم بطرق جديدة ومثيرة.
+                            تأسست وكالة <span class="font-bold text-teal-700">روز للسفر والسياحة</span>  برؤية طموحة لتحويل أحلام السفر إلى واقع ملموس.  كنا شريكاً موثوقاً للآلاف من المسافرين الذين سعوا لاكتشاف العالم بطرق جديدة ومثيرة.
                         </p>
                         
                         <p class="animate-on-scroll">
