--- a/about.html
+++ b/about.html
@@ -594,7 +594,7 @@
         <!-- الوصف -->
         <div class="max-w-3xl mx-auto mb-12">
             <p class="text-xl md:text-2xl text-white/90 leading-relaxed">
-                وكالة <span class="font-bold text-amber-300">روز</span> للسفر والسياحة - نصنع تجارب سفر استثنائية منذ 2010
+                وكالة <span class="font-bold text-amber-300">روز</span> للسفر والسياحة - نصنع تجارب سفر استثنائية 
                 <br>
                 نقدم خدمات سياحية متميزة تجمع بين الفخامة والأصالة
             </p>
@@ -678,7 +678,7 @@
                     <div class="gradient-bg text-white rounded-2xl p-8 shadow-xl animate-on-scroll-left card-hover">
                         <div class="text-amber-300 text-4xl mb-4"><i class="fas fa-eye"></i></div>
                         <h3 class="text-2xl font-bold mb-4">رؤيتنا</h3>
-                        <p class="text-white/90">أن نكون الوكالة الرائدة في صناعة السياحة بالسعودية والشرق الأوسط، من خلال تقديم تجارب سفر استثنائية تلهم المسافرين وتتجاوز توقعاتهم.</p>
+                        <p class="text-white/90">أن نكون الخيار الأول في مجال السفر والسياحة من خلال تقديم خدمات مبتكرة وتجارب سفر استثنائية بحلول عام ٢٠٣٠ م</p>
                     </div>
                     
                     <div class="bg-gradient-to-r from-amber-500 to-amber-600 text-white rounded-2xl p-8 shadow-xl animate-on-scroll-right card-hover">
