--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>وكالة روز للسفر والسياحة</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+ <title> وكالة روز للسفر والسياحة - افضل وكالة سفر وسياحة في جدة</title>    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
