--- a/contact.html
+++ b/contact.html
@@ -965,16 +965,17 @@
                             </div>
 
                             <!-- ساعات العمل -->
-                            <div class="flex items-start gap-4">
-                                <div class="bg-[#e69a17]/10 p-3 rounded-lg">
-                                    <i class="fas fa-clock text-[#e69a17] text-xl"></i>
-                                </div>
-                                <div>
-                                    <h4 class="font-bold text-gray-900 mb-1">ساعات العمل</h4>
-                                    <p class="text-gray-600">الأحد - الخميس: 8 صباحاً - 10 مساءً</p>
-                                    <p class="text-gray-600">الجمعة - السبت: 4 مساءً - 11 مساءً</p>
-                                </div>
+                          <div class="flex items-start gap-4">
+                            <div class="bg-[#e69a17]/10 p-3 rounded-lg">
+                                <i class="fas fa-clock text-[#e69a17] text-xl"></i>
                             </div>
+                            <div>
+                                <h4 class="font-bold text-gray-900 mb-1">ساعات العمل</h4>
+                                <p class="text-gray-600">يوميًا: 10 صباحًا - 11 مساءً</p>
+                                <p class="text-gray-600">الجمعة: مغلق</p>
+                                <p class="text-gray-600">السبت: 3 مساءً - 11 مساءً</p>
+                            </div>
+                        </div>
                         </div>
 
 
