--- a/index.html
+++ b/index.html
@@ -2390,7 +2390,7 @@
                             </p>
                             <div class="flex items-center justify-between">
                                 <div></div>
-                                <a href="tel:0502113147"
+                                <a href="./services/hotel-eservations/index.html"
                                     class="w-12 h-12 bg-[#e69a17] hover:bg-[#e69a17] text-white rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110">
                                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
